fixed bug with search section overlapping rest of displayed content

--- a/web/src/main/webapp/css/style.css
+++ b/web/src/main/webapp/css/style.css
@@ -86,6 +86,46 @@ our div's
 -------*/
 
 /*-------
+collapsible element for advanced search
+-------*/
+
+.collapsible {
+	background-color: #777;
+	color: white;
+	cursor: pointer;
+	padding: 18px;
+	width: 100%;
+	border: none;
+	text-align: left;
+	outline: none;
+	font-size: 15px;
+}
+
+.active, .collapsible:hover {
+	background-color: #777;
+}
+
+.collapsible:after {
+	content: '\002B';
+	color: white;
+	font-weight: bold;
+	float: right;
+	margin-left: 5px;
+}
+
+.active:after {
+	content: "\2717";
+}
+
+.content {
+	padding: 0 18px;
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 0.2s ease-out;
+	background-color: #f1f1f1;
+}
+
+/*-------
 div's for fav beam
 -------*/
 
@@ -676,6 +716,9 @@ Hero section
 .hero-section {
 	height: 80%;
 	padding-top: 20%;
+	padding-bottom: 20%;
+	margin-bottom: 50px;
+	min-height: 600px;
 }
 
 .hero-warp {
@@ -1668,7 +1711,8 @@ Responsive
 	.hero-section {
 		height: auto;
 		padding-top: 250px;
-		padding-bottom: 100px;
+		padding-bottom: 250px;
+		min-height: 250px;
 	}
 	.hero-warp {
 		padding: 25px 20px 29px;
